--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "node-spotify-youtube-downloader",
   "version": "0.9",
   "description": "Download songs from youtube then add tags with spotify web API",
+  "homepage": "https://github.com/Douile/node-spotify-youtube-downloader#readme",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
